# ci_cd_workflows

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/my_package/: my_code.py
tests/: test_my_code.py
